@@ -25,7 +25,7 @@ import java.util.HashSet;
 import java.util.Locale;
 import java.util.Set;
 
-import org.joda.time.base.AbstractPartial;
+import org.joda.time.base.BaseLocal;
 import org.joda.time.chrono.ISOChronology;
 import org.joda.time.convert.ConverterManager;
 import org.joda.time.convert.PartialConverter;
@@ -71,7 +71,7 @@ import org.joda.time.format.ISODateTimeFormat;
  * @since 1.3
  */
 public final class LocalTime
-        extends AbstractPartial
+        extends BaseLocal
         implements ReadablePartial, Serializable {
 
     /** Serialization lock */
@@ -553,7 +553,7 @@ public final class LocalTime
      * 
      * @return the number of milliseconds since 1970-01-01T00:00:00
      */
-    long getLocalMillis() {
+    protected long getLocalMillis() {
         return iLocalMillis;
     }
 
